--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
04/03/24 (TRUST) New feature  : New option 'trust -quiet jdd.data' can be used to run a dataset with not output on the console. 
04/03/24 (TRUST) Change       : EcritureLectureSpecial is forced to 0 for PolyMAC simulations (all versions); ie: for resuming a simulation, only binary sauv files are accepted for this discretization family.
04/03/24 (TRUST) New feature  : It is now possible to resume Pb_Multiphase simulations (both via last time or champ_fonc_reprise).
29/02/24 (TRUST) Tools        : Patched MEDCoupling to correct tetrahedrons remapping (fix will be included in next release of MEDCoupling)
26/02/24 (TRUST) New feature  : Fallback to coarse solver if the IJK-multigrid has not reached convergence during current timestep (this concerns IJK discretization only)
05/02/24 (TRUST) New feature  : New post-processing format introduced in TRUST : CGNS (CFD General Notation System). Not yet available for FT interface mesh (will be soon !)
02/02/24 (TRUST) Fix          : Fixed bug in post-processing fields on nodes (SOM) in MED Format (internal MEDCouplingUMesh was not always in sync with Domaine)
31/01/24 (TRUST) Fix          : Fixed handling of empty domains in VEF, PolyMAC_P0, and other related areas.
31/01/24 (TRUST) Fix          : Bug fix in pb_couple on the same domain with missing APPEND for fields.
31/01/24 (TRUST) Fix          : Resolved the issue in Perte_Charge_VEF with non-uniform, non-xyz viscosity.
31/01/24 (TRUST) Fix	      : Replaced deprecated Pandas append with concat in Jupyter notebooks.
31/01/24 (TRUST) New feature  : himp and Text in Terme_Puissance_Thermique_Echange_Impose can now be champ_fonc fields.