@@ -7,7 +7,7 @@ cas=ICoCo_ChDonXYZ_reset
 
 if [ ! -f PAR_$cas.lml ]
 then
-   compare_lata $cas"_DO_IT_AFTER_RESET".lata $cas"_LATA".lata --dernier 1>compare_lata.log 2>&1
+   compare_lata $cas"_DO_IT".lata $cas"_LATA".lata --dernier 1>compare_lata.log 2>&1
 else
-   compare_lata PAR_$cas"_DO_IT_AFTER_RESET".lata PAR_$cas"_LATA".lata --dernier 1>>compare_lata.log 2>&1
+   compare_lata PAR_$cas"_DO_IT".lata PAR_$cas"_LATA".lata --dernier 1>>compare_lata.log 2>&1
 fi
