@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------------------------
 Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
 --------------------------------------------------------------------------------------------------
+06/03/24 (TRUST) New feature  : Implementing ICoCo resetTime() method allowing to reset the time origin during the computation. For now previous post files are overwritten by default.
 04/03/24 (TRUST) New feature  : New option 'trust -quiet jdd.data' can be used to run a dataset with not output on the console. 
 04/03/24 (TRUST) Change       : EcritureLectureSpecial is forced to 0 for PolyMAC simulations (all versions); ie: for resuming a simulation, only binary sauv files are accepted for this discretization family.
 04/03/24 (TRUST) New feature  : It is now possible to resume Pb_Multiphase simulations (both via last time or champ_fonc_reprise).
